--- a/playbook.yml
+++ b/playbook.yml
@@ -2,4 +2,11 @@
   hosts: conodes
   gather_facts: no
   roles:
-    - name: roles/memcoin
+    - name: roles/conode
+
+- name: Setup front-end
+  hosts: portal
+  gather_facts: no
+  roles:
+    - name: roles/portal
+
