--- a/roles/portal/tasks/main.yml
+++ b/roles/portal/tasks/main.yml
@@ -3,12 +3,11 @@
   tags: always
 
 
-- name: Install nginx
-  ansible.builtin.apt:
-    name: nginx
-    state: present
-    force_apt_get: yes
-  become: yes
+- name: Manage nginx
+  import_tasks:
+    file: nginx.yml
+  tags:
+    - manage_nginx
 
 
 - name: last node tar.xz version present ?
@@ -45,8 +44,70 @@
   tags:
     - install_web_backend
 
+
+- name: Move voting_portal.service template in /etc/systemd/system
+  ansible.builtin.template:
+    src: voting_portal.service
+    dest: /etc/systemd/system/voting_portal.service
+    owner: root
+    group: root
+    mode: '0755'
+  notify:
+    - reload systemctl
+    - restart portal
+  become: true
+  tags:
+    - install_server_service
+
+
+- name: Run server.js template
+  service:
+    name: voting_portal
+    enabled: yes
+    state: started
+  become: true
+  tags:
+    - run_server_service
+
+
 - name: Install web frontend
   import_tasks:
     file: web_frontend.yml
   tags:
     - install_web_frontend
+
+
+- name: Move voting_nginx.service template in /etc/systemd/system
+  ansible.builtin.template:
+    src: voting_nginx.service
+    dest: /etc/systemd/system/voting_nginx.service
+    owner: root
+    group: root
+    mode: '0755'
+  notify:
+#    - reload systemctl
+    - restart nginx
+  become: true
+  tags:
+    - install_voting_nginx_service
+
+
+- name: Run nginx template
+  service:
+    name: voting_nginx
+    enabled: yes
+    state: started
+  become: true
+  tags:
+    - run_voting_nginx_service
+
+
+- name: Create config.env
+  ansible.builtin.template:
+    src: config.env
+    dest: "web-backend-{{ DELA_VERSION }}/config.env"
+    owner: ubuntu
+    group: ubuntu
+    mode: '0755'
+  tags:
+    - create_config_env
