--- a/roles/portal/tasks/web_backend.yml
+++ b/roles/portal/tasks/web_backend.yml
@@ -25,31 +25,15 @@
   when: _web_backend_exist.stdout.find('It exists') == -1
 
 
-- name: config.env exists ?
-  ansible.builtin.shell:
-    cmd: "test -e web-backend-{{ DELA_VERSION }}/config.env && echo 'It exists'"
-  failed_when: false
-  changed_when: false
-  register: _config_env
-
-- name: create config.env if it doesnt exist
-  ansible.builtin.file:
-    path: "web-backend-{{ MEMCOIN_VERSION }}/config.env"
-    state: touch
+- name: Create config.env
+  ansible.builtin.template:
+    src: config.env
+    dest: "web-backend-{{ DELA_VERSION }}/config.env"
+    owner: ubuntu
+    group: ubuntu
     mode: '0755'
-  when: _config_env.stdout.find('It exists') == -1
-
-- name: Put data in config.env since the current is not updated
-  ansible.builtin.shell: '|
-    cat <<EOF >> web-backend-{{ DELA_VERSION }}/config.env
-    export FRONT_END_URL="http://itsevoting0008.xaas.epfl.ch"
-    export DELA_NODE_URL="http://itsevoting0009.xaas.epfl.ch:2000"
-    export SESSION_SECRET="nimporte quasession secret"
-    export PUBLIC_KEY="adbacd10fdb9822c71025d6d00092b8a4abb5ebcb673d28d863f7c7c5adaddf3"
-    export PRIVATE_KEY="28912721dfd507e198b31602fb67824856eb5a674c021d49fdccbe52f0234409"
-    export DB_PATH="/home/ubuntu/data"
-    EOF'
-  when: _config_env.stdout.find('It exists') == -1
+  tags:
+    - create_config_env
 
 
 - name: Remove undefined*  # rm -rf /home/ubuntu/web-backend-{{ DELA_VERSION }}/undefined*
@@ -60,11 +44,17 @@
     - remove_undefined
 
 
+# AddAdmin is idempotent
+- name: Add admins
+  shell: |
+    NODE_PATH=web-backend-{{ DELA_VERSION }}/node_modules ./node-{{ NODE_VERSION }}-linux-x64/bin/node -e 'require("./web-backend-{{ DELA_VERSION }}/dbUtils").addAdmin("data/dvoting-users", 121769)'
+    NODE_PATH=web-backend-{{ DELA_VERSION }}/node_modules ./node-{{ NODE_VERSION }}-linux-x64/bin/node -e 'require("./web-backend-{{ DELA_VERSION }}/dbUtils").addAdmin("data/dvoting-users", 128871)'
+
 #- name: Add admins
 #  shell: |
 #    NODE_PATH=web-backend-{{ DELA_VERSION }}/node_modules ./node-{{ NODE_VERSION }}-linux-x64/bin/node -e 'require("./web-backend-{{ DELA_VERSION }}/dbUtils").listEls("data/dvoting-users")'
 #    NODE_ENV=production PORT=6000 NODE_PATH=web-backend-{{ DELA_VERSION }}/node_modules ./node-{{ NODE_VERSION }}-linux-x64/bin/node web-backend-{{ DELA_VERSION }}/Server.js
-#    NODE_PATH=web-backend-{{ DELA_VERSION }}a/node_modules ./node-{{ NODE_VERSION }}-linux-x64/bin/node -e 'require("./web-backend-{{ DELA_VERSION }}/dbUtils").addAdmin("data/dvoting-users", 175129)'
+#    NODE_PATH=web-backend-{{ DELA_VERSION }}/node_modules ./node-{{ NODE_VERSION }}-linux-x64/bin/node -e 'require("./web-backend-{{ DELA_VERSION }}/dbUtils").addAdmin("data/dvoting-users", 121769)'
 #    NODE_PATH=web-backend-{{ DELA_VERSION }}/node_modules ./node-{{ NODE_VERSION }}-linux-x64/bin/node -e 'require("./web-backend-{{ DELA_VERSION }}/dbUtils").addAdmin("data/dvoting-users", 128871)'
 #    NODE_PATH=web-backend-{{ DELA_VERSION }}/node_modules ./node-{{ NODE_VERSION }}-linux-x64/bin/node -e 'require("./web-backend-{{ DELA_VERSION }}/dbUtils").addAdmin("data/dvoting-users")'
 #    NODE_PATH=web-backend-{{ DELA_VERSION }}/node_modules ./node-{{ NODE_VERSION }}-linux-x64/bin/node -e 'require("./web-backend-{{ DELA_VERSION }}/dbUtils").listEls("data/dvoting-users")'
