Apply env variables from .profile

--- a/roles/portal/templates/config.env
+++ b/roles/portal/templates/config.env
@@ -1,6 +1,6 @@
 export FRONT_END_URL="{{ portal_server_url }}"
 export DELA_NODE_URL="{{ conode_server_url }}:2000"
 export SESSION_SECRET="nimporte quasession secret"
-export PUBLIC_KEY="{{ _secrets["PUBLIC_KEY"] }}"
-export PRIVATE_KEY="{{ _secrets["PRIVATE_KEY"] }}"
+export PUBLIC_KEY="{{ _secrets['PUBLIC_KEY'] }}"
+export PRIVATE_KEY="{{ _secrets['PRIVATE_KEY'] }}"
 export DB_PATH="{{ db_dir }}"
