Put environment variables of config.env inside vorting_portal.service

--- a/roles/portal/handlers/main.yml
+++ b/roles/portal/handlers/main.yml
@@ -3,10 +3,12 @@
   service:
     name: voting_portal
     state: restarted
+  become: true
 
 
 - name: restart nginx
   service:
     name: nginx
     state: restarted
+  become: true
 
