--- a/roles/portal/templates/voting_portal.service
+++ b/roles/portal/templates/voting_portal.service
@@ -4,7 +4,7 @@ After=network.target
 
 [Service]
 Type=simple
-WorkingDirectory=/home/ubuntu/web-backend-{{ DELA_VERSION }}
+WorkingDirectory=/home/ubuntu/web-backend
 
 Environment=FRONT_END_URL={{ portal_server_url }}
 Environment=DELA_NODE_URL={{ conode_server_url }}:2000
@@ -15,7 +15,7 @@ Environment=DB_PATH={{ db_dir }}
 
 Environment=NODE_ENV=production
 Environment=PORT=6000
-Environment=NODE_PATH=web-backend-{{ DELA_VERSION }}/node_modules
+Environment=NODE_PATH=web-backend/node_modules
 ExecStart=/home/ubuntu/node-{{ NODE_VERSION }}-linux-x64/bin/node Server.js
 User=ubuntu
 Group=ubuntu
