--- a/roles/portal/tasks/web_old_versions.yml
+++ b/roles/portal/tasks/web_old_versions.yml
@@ -1,8 +1,49 @@
-- name: Get source code
-  import_tasks:
-    file: ./web_old_versions/source_code.yml
+#- name: Clone bill2myprint repo
+#  git:
+#      repo: https://github.com/dedis/d-voting.git
+#      dest: /tmp/d-voting
+#      force: yes
+#      version: main
+#  tags:
+#    - git_clone
+
+
+#- name: Recursively change ownership of a directory
+#  ansible.builtin.file:
+#    path: /app/ofrf/src
+#    recurse: yes
+#    mode: '0755'
+#  become: yes
+#  tags:
+#    - ofrf_change_modea
+
+
+- name: source tar.gz exists ?
+  ansible.builtin.shell:
+    cmd: "test -e v{{ DELA_VERSION }}.tar.gz && echo 'It exists'"
+  failed_when: false
+  changed_when: false
+  register: _source_code_exist
+
+
+- name: Download source code tar.gz
+  ansible.builtin.get_url:
+    url: "https://github.com/dedis/d-voting/archive/refs/tags/v{{ DELA_VERSION }}.tar.gz"
+    dest: "{{ INSTALL_DIR }}/{{ DELA_VERSION }}.tar.gz"
+    mode: '0755'
   tags:
-    - get_source_code
+    - download_source_code
+  when: _source_code_exist.stdout.find('It exists') == -1
+
+
+- name: Unzip code source tar.gz version  # tar xvfz v0.4.4.tar.gz
+  ansible.builtin.unarchive:
+    src: "v{{ DELA_VERSION }}.tar.gz"
+    dest: /home/ubuntu
+    remote_src: yes
+  tags:
+    - unzip_source_code
+  when: _source_code_exist.stdout.find('It exists') == -1
 
 
 - name: Install web backend
@@ -10,6 +51,7 @@
     file: ./web_old_versions/web_backend.yml
   tags:
     - install_web_backend
+  when: _source_code_exist.stdout.find('It exists') == -1
 
 
 - name: Install web frontend
@@ -17,3 +59,4 @@
     file: ./web_old_versions/web_frontend.yml
   tags:
     - install_web_frontend
+  when: _source_code_exist.stdout.find('It exists') == -1
