--- a/roles/portal/tasks/get_node.yml
+++ b/roles/portal/tasks/get_node.yml
@@ -26,3 +26,21 @@
   tags:
     - unzip_nodejs
   when: _nodejs_exist.stdout.find('It exists') == -1
+
+
+- name: Remove previous symlink to node version
+  ansible.builtin.file:
+    path: /usr/bin/node
+    state: absent
+  become: true
+  when: _nodejs_exist.stdout.find('It exists') == -1
+
+
+- name: Create symlink to node version
+  ansible.builtin.file:
+    src: "{{ INSTALL_DIR }}/node-{{ NODE_VERSION }}-linux-x64/bin/node"
+    owner: ubuntu
+    dest: /usr/bin/node
+    state: link
+  become: true
+  when: _nodejs_exist.stdout.find('It exists') == -1
