--- a/roles/portal/tasks/web_old_versions.yml
+++ b/roles/portal/tasks/web_old_versions.yml
@@ -29,7 +29,7 @@
 - name: Download source code tar.gz
   ansible.builtin.get_url:
     url: "https://github.com/dedis/d-voting/archive/refs/tags/v{{ DELA_VERSION }}.tar.gz"
-    dest: "{{ INSTALL_DIR }}/{{ DELA_VERSION }}.tar.gz"
+    dest: "{{ INSTALL_DIR }}/v{{ DELA_VERSION }}.tar.gz"
     mode: '0755'
   tags:
     - download_source_code
