[feat] (useless) ansibilisation of the join procedure

--- a/roles/demo/tasks/main.yml
+++ b/roles/demo/tasks/main.yml
@@ -13,4 +13,8 @@
         - dela
         - dela.run
 
-
+- name: Include dela admin task
+  tags:
+    - dela
+  include_tasks:
+    file: admin.yml
