[feat] 4 demo nodes with ssl by http proxy
 - traefik container as http proxy
 - traefik config passed as labels
 - pre-existing glob ssl certificates taken from keybase

--- a/playbook-demo.yml
+++ b/playbook-demo.yml
@@ -16,5 +16,7 @@
 - name: Demo
   hosts: all
   roles:
+    - name: ensure traefik container
+      role: roles/traefik
     - name: setup dela demo
       role: roles/demo
