--- a/inventories/hosts-demo.yml
+++ b/inventories/hosts-demo.yml
@@ -20,17 +20,42 @@ all:
       ansible_host: 10.95.96.167
       ansible_port: 22
       ansible_user: root
+      DELA_NODES:
+        - name: "evdemo1"
+          http_host: "evdemo1.fsd.team"
+          http_port: "8080"
+          node_host: "evdemo1n.fsd.team"
+          node_port: "2000"
+        - name: "evdemo4"
+          http_host: "evdemo4.fsd.team"
+          http_port: "8080"
+          node_host: "evdemo4n.fsd.team"
+          node_port: "2000"
     itsevoting0009.xaas.epfl.ch:
       ansible_host: 10.95.96.166
       ansible_port: 22
       ansible_user: root
+      DELA_NODES:
+        - name: "evdemo2"
+          http_host: "evdemo2.fsd.team"
+          http_port: "8080"
+          node_host: "evdemo2n.fsd.team"
+          node_port: "2000"
     itsevoting0010.xaas.epfl.ch:
       ansible_host: 10.95.96.173
       ansible_port: 22
       ansible_user: root
-    # itsevoting0011.xaas.epfl.ch:
-    #   ansible_host: 10.95.96.174
-    #   ansible_port: 22
-    #   ansible_user: root
+      DELA_NODES:
+        - name: "evdemo3"
+          http_host: "evdemo3.fsd.team"
+          http_port: "8080"
+          node_host: "evdemo3n.fsd.team"
+          node_port: "2000"
+    itsevoting0011.xaas.epfl.ch:
+      ansible_host: 10.95.96.174
+      ansible_port: 22
+      ansible_user: root
   vars:
     RUNENV: demo
+    DOMAINS:
+      - fsd.team
