--- a/roles/demo/vars/dela_vars.yml
+++ b/roles/demo/vars/dela_vars.yml
@@ -4,9 +4,7 @@ dela:
   public_key: '{{ _secrets.dela_public_key | default("7a97bfc968c74fbf0553fdec1a97d8265bd3a32e31edd61e296ea701a009147e") }}'
   worker_image: '{{ DELA_IMAGE_URL | default("ghcr.io/c4dt/d-voting-dela:latest") }}'
   worker_hostname: '{{ DELA_WORKER_HOSTNAME | default(inventory_hostname) }}'
-  workers_count: '{{ DELA_WORKERS_COUNT | default(2) }}'
-  proxy_port: '{{ DELA_PROXY_PORT | default(8080) }}'
-  node_port: '{{ DELA_NODE_PORT | default(2000) }}'
   join_address: '{{ _secrets.dela_join_address }}'
   join_token: '{{ _secrets.dela_join_token }}'
   join_hash: '{{ _secrets.dela_join_hash }}'
+  nodes: '{{ DELA_NODES | default([]) }}'
